edit register and market analytis page
