# Entities/dtos/register_response.go
@@ -1,8 +1,10 @@
 package dtos
 
 type RegisterResponse struct {
-	ID       string `json:"id"`
-	Username string `json:"username"`
-	Email    string `json:"email"`
-	Phone    string `json:"phone"`
+	ID        string `json:"id"`
+	Username  string `json:"username"`
+	Email     string `json:"email"`
+	Phone     string `json:"phone"`
+	Firstname string `json:"firstname"`
+	Lastname  string `json:"lastname"`
 }
